<resources>
    <string name="app_name">신고위치 알리미</string>


    <string name="NumberListPage">긴급전화 목록</string>
    <string name="Btn_caution">이용 시 주의사항</string>
    <string name="AddCallNumber">번호 추가하기</string>

    <!-- 번호 추가 다이얼로그 리소스 -->
    <string name="Dialog_AddNum">새로운 번호 추가</string>
    <string name="EnterNum">번호를 입력해주세요.</string>
    <string name="DialogText">기호없이 입력해주세요</string>
    <string name="Btn_Add">추가</string>
    <string name="Btn_Cancel">취소</string>

    <!-- 번호 삭제 다이얼로그 리소스 -->
    <string name="Dialog_DelList">번호 삭제</string>
    <string name="DialogDelText">해당 번호를 삭제하시겠습니까?</string>
    <string name="Btn_Confirm">확인</string>

</resources>