<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/round_default"
    android:outlineProvider="none">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dialog_AddNum"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="21sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/EnterNum"
                    android:textAlignment="textStart"
                    android:autofillHints="phone"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:text=""
                    android:autoSizeTextType="uniform"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:background="@drawable/round_gray"
                    android:textColorHint="@android:color/darker_gray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#6E6E6E"
                    android:text="@string/DialogText"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.7">

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_round"
                    android:text="@string/Btn_Add"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.7">



                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/Btn_Cancel"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"/>



        </LinearLayout>



    </LinearLayout>

</LinearLayout>